--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "easy-peasy-bot",
   "version": "1.0.0",
-  "description": "The awesomest bot evar.",
+  "description": "The AuditBoard Celebration Bot is a friendly automaton who congratulates employees on anniversaries, birthdays, and more!.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -9,18 +9,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DEGoodmanWilson/easy-peasy-bot-app.git"
+    "url": "git+https://github.com/leahlang4d2/easy-peasy-bot-app.git"
   },
   "keywords": [
     "slack",
     "bot"
   ],
-  "author": "D.E. Goodman-Wilson",
+  "author": "#anniversary-bot hackathon team!",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/DEGoodmanWilson/easy-peasy-bot-app/issues"
+    "url": "https://github.com/leahlang4d2/easy-peasy-bot-app/issues"
   },
-  "homepage": "https://github.com/DEGoodmanWilson/easy-peasy-bot-app#readme",
+  "homepage": "https://github.com/leahlang4d2/easy-peasy-bot-app#readme",
   "dependencies": {
     "botkit": "0.2.2",
     "botkit-storage-mongo": "^1.0.2",
